--- a/css/main.css
+++ b/css/main.css
@@ -119,8 +119,8 @@ img {
     right: 15px;
   }
   .mobile-menu {
-    position: absolute;
-    z-index: 1000;
+    position: fixed;
+    z-index: 1;
     width: 100%;
     max-width: 100vw;
     height: 100vh;
@@ -128,8 +128,7 @@ img {
     left: 0;
     transform: translateX(-150%);
     background-color: var(--primary-write-color);
-    padding-top: 48px;
-    padding-left: 40px;
+    padding: 48px 40px;
     transition: var(--duration) var(--timing-function);
   }
   .mobile-menu.is-open {
@@ -169,17 +168,16 @@ img {
     display: flex;
     margin-top: 64px;
   }
+  .mobile-menu-social-item:not(:last-child) {
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+    padding-right: 10px;
+    margin-right: 10px;
+  }
   .mobile-menu-social-link {
     font-size: 18px;
     line-height: 1.222;
     letter-spacing: 0.02em;
     color: var(--accent-color);
-  }
-  .mobile-menu-social-link::after {
-    content: "";
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    margin-left: 10px;
-    margin-right: 10px;
   }
   .site-nav {
     display: none;
@@ -1383,5 +1381,15 @@ img {
   background-color: #188CE8;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+@media screen and (max-width: 480px) {
+  .modal {
+    max-width: 450px;
+    max-height: 609px;
+  }
+  .form {
+    max-width: 450px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
