--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -1,3 +1,5 @@
+
+
 .backdrop {
     position: fixed;
     top: 0;
@@ -212,5 +214,17 @@
             border-radius: 4px;
         }
 }
+
+@media screen and (max-width: 480px) {
+    .modal {
+        max-width: 450px;
+        max-height: 609px;
+    }
+
+    .form {
+        max-width: 450px;
+    }
+}
+
 
 
