--- a/sass/layout/_page-header.scss
+++ b/sass/layout/_page-header.scss
@@ -32,8 +32,8 @@
     }
 
     .mobile-menu {
-        position: absolute;
-        z-index: 1000;
+        position: fixed;
+        z-index: 1;
         width: 100%;
         max-width: 100vw;
         height: 100vh;
@@ -41,8 +41,7 @@
         left: 0;
         transform: translateX(-150%);
         background-color: var(--primary-write-color);
-        padding-top: 48px;
-        padding-left: 40px;
+        padding: 48px 40px;
         transition: var(--duration) var(--timing-function);
         
 
@@ -94,6 +93,11 @@
         display: flex;
         margin-top: 64px;
     }
+    .mobile-menu-social-item:not(:last-child) {
+        border-right: 1px solid rgba(33, 33, 33, 0.2);
+        padding-right: 10px;
+        margin-right: 10px;
+    }
 
 
     .mobile-menu-social-link {
@@ -102,13 +106,6 @@
         letter-spacing: 0.02em;
         color: var(--accent-color);
 
-        &::after {
-            content: "";
-            border: 1px solid rgba(33, 33, 33, 0.2);
-            margin-left: 10px;
-            margin-right: 10px;
-
-        }
     }
     .site-nav {
         display: none;
